Fix equator and dominant genome highlight